# Rust-AutoGPT

./: Cargo.toml  README.md
autogpt/: README.md
autogpt/schemas/: api_schema.json
autogpt/src/models/agents/: agent_backend.rs
code-generator/: .gitignore  Cargo.toml
code-generator/src/apis/: call_request.rs
code-generator/src/helpers/: general.rs
code-generator/src/models/agents/: agent_architect.rs
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs
web-server/: Cargo.toml  README.md  database.json
web-server/src/: code_template.rs  main.rs
