[package]
name = "rust-autogpt"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
crossterm = "0.28.1"
async-trait = "0.1.82"
webbrowser = "1.0.2"
strum = "0.26.3"
strum_macros = "0.26.4"
ai_functions = "0.1.1"
